--- a/.gitignore
+++ b/.gitignore
@@ -3,23 +3,30 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+node_modules/
+frontend/node_modules/
 
-# Editor directories and files
-.vscode/*
+# Build output
+dist/
+frontend/dist/
+dist-ssr/
+
+# Local env files
+*.local
+.env
+.env.*
+
+# Editor settings
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
